--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "networks"]
 	path = networks
 	url = https://github.com/dcep93/league_networks.git
+[submodule "tables"]
+	path = tables
+	url = https://github.com/dcep93/league_tables.git
